--- a/src/components/styles/Title.css
+++ b/src/components/styles/Title.css
@@ -1,15 +1,15 @@
 .card-title {
     display: flex;
-    width: 100%;
     height: fit-content;
+    min-width: 31.5rem;
     justify-content: space-between;
 }
 
 .card-title-left {
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
-    margin-left: 15px;
+    margin-left: 1rem;
 }
 
 .card-title-left img {
@@ -34,12 +34,13 @@
 
 .card-title-right {
     display: flex;
-    flex-direction: row;
+    /* justify-content: flex-end; */
+    gap: 1rem;
 }
 
 .card-title-right-btn {
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
     background: none;
     border: none;
